--- a/25-01-20.md
+++ b/25-01-20.md
@@ -142,6 +142,38 @@ Ex: # docker run --name c1 --cap-add=chown  -d -p 8081:8080 tomcat
 Note:  If drops capabilities before starting a container, inside a  container can not get them back.
 
 ```
+# Runtime privilege
+
+
+* By default, Docker containers are “unprivileged” 
+* By default a container is not allowed to access any devices(disk), 
+* But if we give  a “privileged” to container is given access to for all devices(all  disks).
+* When executes  “docker run --privileged”, Docker will enable access to all devices on the host as well as set some configuration.
+* If you want to access to a specific device or devices you can use the --device flag. It allows you to specify one or more devices that will be accessible within the container By  “docker run --device=/dev/snd”
+
+
+```
+Exp: For All devices
+# docker run --name c1 --privileged --cap-add=ALL -d -p 8081:8080 tomcat
+
+
+Exp:  For specific device
+# docker run --name c2 --cap-add=ALL --device=/dev/xvdf -d -p 8082:8080 tomcat
+
+
+```
+
+
+# docker network
+
+```
+#docker network create -d bridge --subnet 10.10.0.0/24  maha-bridge
+#docker network ls
+
+#docker run  --name c1 --network mahanw -d -p 8081:8080 tomcat
+#docker run  --name c2 --network mahanw -d -p 8082:8080 tomcat 
+
+```
 
 
 
